k8s/price-poc/base/db_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: price-db
spec:
  clusterIP: None
  ports:
  - port: 3306
---
kind: Endpoints
apiVersion: v1
metadata:
  name: price-db
subsets:
  - addresses:
        - ip: 192.168.0.61
    ports:
      - port: 3306
        name: price-db
