k8s/price-poc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.id: 6722e210-e0cf-4854-883b-589574d3a308 # Load balancer ID. Replace it with the actual value.
  labels:
    app: price-poc
  name: price-poc
spec: 
  ports: 
  - name: price-poc 
    port: 8080
    protocol: TCP 
    targetPort: 8080
  selector: 
    app: price-poc 
  type: LoadBalancer
